# rabbitui

./: Cargo.toml  LICENSE  README.md
src/: client.rs  config.rs  events.rs  main.rs  models.rs
src/views/: exchange.rs  mod.rs  overview.rs  queues.rs
src/widgets/: chart.rs  confirmation.rs  files.rs  help.rs  mod.rs  notif.rs
